fix invisible edit icon

--- a/src/app/assets/stylesheets/app.scss
+++ b/src/app/assets/stylesheets/app.scss
@@ -210,7 +210,9 @@ a[rel="nofollow noopener"]:after {
 
   .Icon {
     margin-left: 0.25em;
-    fill: white;
+    @include themify($themes) {
+      fill: themed('textColorSecondary');
+    }
   }
 }
 
